# voxprofile

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_screenshot.jsonl  sample_events.jsonl  sample_events_run2.jsonl  sample_events_tools.jsonl
src/voxprofile/: __init__.py  cli.py  html.py  model.py  pipecat_observer.py  render.py  stats.py
tests/: test_cli.py  test_function_calls.py  test_model.py  test_pipecat_observer.py  test_render_html.py  test_stats.py
